# slint-editor

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
ui/: appwindow.slint
