[package]
name = "slint-editor"
version = "0.1.0"
authors = ["Badless (DevBrainless)"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.11.4"
slint = "1.0"

[build-dependencies]
slint-build = "1.0"
